--- a/Organizer.html
+++ b/Organizer.html
@@ -100,16 +100,16 @@
               <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-2">
                 <li class="u-nav-item"><a
                     class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
-                    href="STACOM.html">STACOM workshop paper</a>
-                </li>
-                <li class="u-nav-item"><a
-                    class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
-                    href="Validation.html">Validatoin submission</a>
+                    href="Validation.html">Validation submission</a>
                 </li>
                 <li class="u-nav-item"><a
                   class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
                   href="Testing.html">Testing submission</a>
               </li>
+              <li class="u-nav-item"><a
+                class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
+                href="STACOM.html">STACOM workshop paper</a>
+            </li>
               </ul>
             </div>
           </li>
@@ -1492,10 +1492,9 @@
       <div
         class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1">
       </div>
-      <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 Fudan University</p>
+      <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
-
 
 </body>
 
