--- a/Testing.html
+++ b/Testing.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <title>CMRxRecon</title>
   <link rel="stylesheet" href="nicepage.css" media="screen">
-  <link rel="stylesheet" href="Testing.css" media="screen">
+  <link rel="stylesheet" href="Sponsor.css" media="screen">
   <link rel="icon" type="image/svg+xml" href="images/cmrlogo.jpeg" />
   <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
   <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
@@ -89,16 +89,16 @@
               <ul class="u-border-2 u-border-white u-nav u-unstyled u-v-spacing-13 u-nav-2">
                 <li class="u-nav-item"><a
                     class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
-                    href="STACOM.html">STACOM workshop paper</a>
-                </li>
-                <li class="u-nav-item"><a
-                    class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
-                    href="Validation.html">Validatoin submission</a>
+                    href="Validation.html">Validation submission</a>
                 </li>
                 <li class="u-nav-item"><a
                   class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
                   href="Testing.html">Testing submission</a>
               </li>
+              <li class="u-nav-item"><a
+                class="u-active-palette-2-base u-button-style u-hover-grey-10 u-nav-link u-white"
+                href="STACOM.html">STACOM workshop paper</a>
+            </li>
               </ul>
             </div>
           </li>
@@ -182,25 +182,8 @@
         alt="" data-image-width="1024" data-image-height="1024">
     </div>
   </section>
-  <!-- <section class="u-clearfix u-section-2" id="sec-95e9">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <p class="u-text u-text-default u-text-grey-60 u-text-1">The challenge is sponsored by&nbsp;Simens Healthineers
-        Ltd., China​&nbsp;</p>
-      <img class="u-image u-image-contain u-image-default u-image-1" src="images/simens.png" alt=""
-        data-image-width="450" data-image-height="112">
-      <p class="u-text u-text-default u-text-grey-60 u-text-2">The following information is provided by the sponsor. No
-        guarantee is provided by the organizers.</p>
-    </div>
-  </section>
-  <section class="u-clearfix u-section-3" id="sec-bdc8">
-    <div class="u-clearfix u-sheet u-sheet-1">
-      <img
-        class="u-absolute-hcenter u-expanded-height u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
-        src="images/20230424_AD-1.png" alt="" data-image-width="2100" data-image-height="6000">
-    </div>
-  </section>
-  <section class="u-clearfix u-section-4" id="sec-6e1a">
-    <div class="u-clearfix u-sheet u-sheet-1">
+   <!-- <section class="u-clearfix u-section-2" id="sec-6e1a">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
       <p class="u-align-center u-text u-text-custom-color-4 u-text-1">
         <span style="font-weight: 700;"> Sponsorship is welcome, and all donations will be used to enhance the shared
           computing power !</span>
@@ -209,6 +192,23 @@
           <span style="text-decoration: underline !important;">CMRxRecon@outlook.com</span>
         </a>).
       </p>
+    </div>
+  </section>
+  <section class="u-clearfix u-section-3" id="sec-95e9">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <p class="u-text u-text-default u-text-grey-60 u-text-1"> The challenge is currently sponsored by Simens
+        Healthineers Ltd., China</p>
+      <img class="u-image u-image-contain u-image-default u-image-1" src="images/simens.png" alt=""
+        data-image-width="450" data-image-height="112">
+      <p class="u-text u-text-default u-text-grey-60 u-text-2">The following information is provided by the sponsor. No
+        guarantee is provided by the organizers.</p>
+    </div>
+  </section>
+  <section class="u-clearfix u-section-4" id="sec-bdc8">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <img
+        class="u-absolute-hcenter u-expanded-height u-image u-image-contain u-image-default u-preserve-proportions u-image-1"
+        src="images/20230424_AD-1.png" alt="" data-image-width="2100" data-image-height="6000">
     </div>
   </section> -->
   <!-- <section class="u-clearfix u-section-5" id="sec-fc75">
@@ -237,7 +237,8 @@
             class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-2">https://stacom.github.io/stacom2023/</a>)
           and make sure you choose the “CMRxRecon” category.
         </li>
-        <li>A paper placeholder must be submitted before <span style="font-weight: 700;">15 July 2023</span>.
+        <li>A paper placeholder must be submitted before <span style="font-weight: 700;">01 August</span>
+          <span style="font-weight: 700;">&nbsp;2023</span>.
         </li>
         <li>Please note that your manuscript will be <span style="font-weight: 700;">considered for publication only if
             you successfully submit the docker container.</span>
@@ -423,7 +424,7 @@
       <div
         class="u-border-1 u-border-grey-dark-1 u-expanded-width u-line u-line-horizontal u-opacity u-opacity-30 u-line-1">
       </div>
-      <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 Fudan University</p>
+      <p class="u-align-center u-text u-text-grey-80 u-text-7">© Copyright 2023 CMRxRecon Working Group</p>
     </div>
   </footer>
 
