--- a/FAQ.html
+++ b/FAQ.html
@@ -644,7 +644,7 @@
               <div class="fr-view u-clearfix u-rich-text u-text">
                 <p>
                   <span class="u-text-grey-60">If the signed challenge rule document is filled out correctly, the
-                    participation request will be approved within 2-4 working days.</span>
+                    participation request will be approved within 2-4 business days.</span>
                 </p>
               </div>
             </div>
